--- a/trunk/of/app/views/user/home.rhtml
+++ b/trunk/of/app/views/user/home.rhtml
@@ -1,4 +1,3 @@
-<% unless(@conceal_homepage) %>
 <fieldset style='float:right'>
   <legend><%= _('User Icon') %></legend>
   <center>
@@ -14,6 +13,7 @@
       :type => 'User', :back_to => url_for(:controller => :user, :action => :home) }%>
   <% end %>
 </fieldset>
+
 <dl>
   <% if (@my and @name =~ NSC_REVIEWERS_LOGIN_FILTER) %>
   <dt>
@@ -32,7 +32,7 @@
   <% if(@my)%>
     <%= _('My Partners')%>
   <%  else %>
-    <%= "<em>#{@name}</em> #{_('\'s Partners')}" %>
+    <%= "<em>#{@name}</em>" + _('User Own Partners') %>
   <% end %>:
   </dt>
   <dd>
@@ -43,23 +43,64 @@
       <br clear="all"/>
     </div>
   </dd>
+
+<% unless(@realname.empty? || @conceal_realname) %>
+  <dt>
+    <% if(@my) %>
+      <%=  _('My Realname') %>
+    <% else %>
+      <%= "<em>#{@name}</em>" + _('User Own Realname') %>
+    <% end %>:
+  </dt>
+  <dd>
+    <%= "#{@realname}"%>
+  </dd>
+<% end %>
+
 <% unless(@conceal_email)%>
   <dt>
     <% if(@my) %>
       <%=  _('My Email') %>
     <% else %>
-      <%= "<em>#{@name}</em> #{_('\'s Email')}" %>
+      <%= "<em>#{@name}</em>" + _('User Own Email') %>
     <% end %>:
    </dt>  
   <dd> 
     <img src="<%= url_for(:controller => :images,:action => "email_image", :id => @email_md5) %>"/>
   </dd>
 <% end %>
+
+<% unless(@homepage.empty? || @conceal_homepage) %>
+  <dt>
+    <% if(@my) %>
+      <%=  _('My Homepage') %>
+    <% else %>
+      <%= "<em>#{@name}</em>" + _('User Own Homepage') %>
+    <% end %>:
+  </dt>
+  <dd>
+    <a href="<%= "#{@homepage}"  %>" target="_blank"><%= "#{@homepage}"  %></a>
+  </dd>
+<% end %>
+
+<% unless(@bio.empty? || @conceal_bio) %>
+  <dt>
+    <% if(@my) %>
+      <%=  _('My Description') %>
+    <% else %>
+      <%= "<em>#{@name}</em>" + _('User Own Description') %>
+    <% end %>:
+  </dt>
+  <dd>
+    <%= "#{@bio}"%>
+  </dd>
+<% end %>
+
   <dt>
   <% if(@my) %>
     <%= _('My Projects')%>
   <% else %>
-    <%= "<em>#{@name}</em> #{_('\'s Projects')}" %>
+    <%= "<em>#{@name}</em>" + _('User Own Projects') %>
   <% end %>:
   </dt>
   <dd>
@@ -68,6 +109,7 @@
     <% end %>
     <br clear="all"/>
   </dd>
+
   <% if @my%>
     <dt>
     <%= _('Signup Date') %>:
@@ -77,4 +119,3 @@
     </dd>
   <% end %>
 </dl>
-<% end %>
