--- a/trunk/of/app/views/releases/uploadfiles.rhtml
+++ b/trunk/of/app/views/releases/uploadfiles.rhtml
@@ -26,7 +26,7 @@
             :project_id => @project.id, 
             :id => @release.id
           }), 
-          :confirm => 'Delete?', 
+            :confirm => "#{_('[Delete]')}?", 
           :method => :post
         %>
         <%= link_to _('[Add release news]'), new_release_news_url({
@@ -56,14 +56,14 @@
 <td> <%= number_to_human_size(f.size) %> </td>
 </tr>
 </table>
-        <%= link_to_remote '[Edit]',:url => editfile_release_url({
+        <%= link_to_remote _('[Edit]'),:url => editfile_release_url({
             :project_id => @project.id,
             :id => @release.id,
             :editfile_id => f.id,
             :div_id => "editfiles_view#{i}",
           }), :update => "editfiles_view#{i}"
         %>
-        <%= link_to_remote '[Remove]',:url => removefile_release_url({
+        <%= link_to_remote _('[Delete]'),:url => removefile_release_url({
             :project_id => @project.id,
             :id => @release.id,
             :removefile_id => f.id
@@ -71,7 +71,7 @@
           :confirm => 'Delete?', 
           :update => "uploadfiles_view"
         %>
-	<%= link_to '[Download]', download_url(:project_name => @project.name, 
+	<%= link_to _('Download'), download_url(:project_name => @project.name, 
 					       :release_version => @release.version,
 					       :file_name => f.path )
         %>
@@ -84,17 +84,20 @@
         :project_id => @project.id, 
         :id => @release.id  }) do -%>
   
-      <h2>Project Upload Reposity</h2>
-      <h3>Current Dir: <%= @current_dir %> </h3>
-      <input name=current_dir type="hidden" value=<%= @current_dir %> />
+      <h2><%=_('Project Upload Reposity')%></h2>
+      <h3><%=_('Current Dir')%>: <%= @current_dir %> </h3>
   
-      <%= submit_to_remote 'reload_button', _('Reload'), :url => reload_release_url({
+        <div id=Uploadfile_selection>
+        <%= submit_to_remote 'reload_button', _('Reload'), :url => reload_release_url({
             :project_id => @project.id,
             :id => @release.id,
            }), :update => "uploadfiles_view" %>
-      <%=submit_tag _('Add File') %> [<%= link_to _("How to Upload?"), "http://webhosting.openfoundry.org/how_to_upload.html", {:target => '_blank'} %>]
-     <br/>
-        <div id=Uploadfile_selection>
+        <%=submit_tag _('Add File') %>
+        <%= submit_to_remote 'delete_files', _('Delete'), :url => delete_files_release_url({
+            :project_id => @project.id,
+            :id => @release.id,
+           }), :update => "uploadfiles_view" %>
+
         <% unless @uploadfiles.empty? -%>
           <select name=uploadfiles[] id=release_file_selection multiple size=10>
       
@@ -110,8 +113,29 @@
           <h5><%=  _('File_not_found') %></h5>
         <%end -%>
       </div>
-  
+    <% end -%>
+
+<ol>
+  <li>您必需先上傳檔案，才能將檔案加入此釋出版本。</li>
+  <li>上傳檔案有兩個方式
+    <ul>
+      <li>Web上傳(若檔案較大或網路頻寬不足時，請使用FTP方式上傳)。<br/>
+<% form_tag ({:project_id => @project.id, :id => @release.id, :action => 'web_upload'}, :multipart => true) do %>
+  <% for i in 1..5 %>
+    <%= file_field_tag("upload_file_#{i}") %><br/>
+  <% end %>
+  <%= submit_tag _("Upload") %>
+  <%= submit_tag _("Reset"), :type => 'reset' %> 
+<% end %>
+      </li>
+      <li>FTP(<%= link_to OPENFOUNDRY_FTP_URL+@current_dir, OPENFOUNDRY_FTP_URL+@current_dir, {:target => '_blank'} %>)，FTP上傳後請先「更新清單」。<br/>
+      參閱[<%= link_to _("How to Upload?"), "http://webhosting.openfoundry.org/how_to_upload.html", {:target => '_blank'} %>]
+      </li>
+    </ul>
+  </li>
+  <li>上傳後請選擇右方清單檔案，並按「加入檔案」。</li>
+</ol>  
+
       </fieldset>
   
-    <% end -%>
   </div>
