--- a/trunk/of/app/views/releases/uploadfiles.rhtml
+++ b/trunk/of/app/views/releases/uploadfiles.rhtml
@@ -84,7 +84,7 @@
         :project_id => @project.id, 
         :id => @release.id  }) do -%>
   
-      <h2><%=_('Project Upload Reposity')%></h2>
+      <h2><%=_('Project Upload Repository')%></h2>
       <h3><%=_('Current Dir')%>: <%= @current_dir %> </h3>
   
         <div id=Uploadfile_selection>
