--- a/trunk/of/app/views/help/nsc_project.rhtml
+++ b/trunk/of/app/views/help/nsc_project.rhtml
@@ -38,37 +38,50 @@
     <img src="nsc_project_images/dhhd869h_111d4dvvgc8_b.jpg" style="WIDTH:128px; HEIGHT:259px"><img src="nsc_project_images/dhhd869h_112cdgvf5fs_b.jpg" style="WIDTH:130px; HEIGHT:192px">
   </li>
   <li>
-    與一般專案不同的地方。<br>
-    最下面的欄位＂國科會計畫編號＂，為國科會專案的必填欄位，填入如 NSC97-2218-E-123-456 的代碼<br>
-    若有此專案進入到第二或三之後的年度，此欄位用逗號分隔填入所有年度的代碼，例如：<br>
-    NSC97-2218-E-123-456, NSC98-2218-E-123-456, NSC99-2218-E-123-456<br>
-    <div id=l95n style=TEXT-ALIGN:left>
-      <img src="nsc_project_images/dhhd869h_113g2r4gqc3_b.jpg" style="WIDTH:553px; HEIGHT:73px">
-    </div>
-    <br>
-  </li>
-  <li>
-    其它注意欄位<br>
+    與一般專案不同，需特別注意的欄位。<br>
     <ul>
       <li>
         專案代號：<br>
+        由英文及數字組成，需以英文字母為開頭，全小寫，長度不超過15個字，不短於3個字，建立後不能修改!!!<br>
+        所以為了專案的延續性，<span style=COLOR:#ff0000>請不要將國科會計畫編號填於專案代號中</span>，因為國科會計畫編號會隨著年度逐年變動，並不適合做為專案代號的識別依據。<br>
         例如：openfoundry<br>
-        (由英文及數字組成，需以英文字母為開頭，全小寫，長度不超過15個字，不短於3個字，建立後不能修改!!!所以為了專案的延續性，<span style=COLOR:#ff0000>請不要將國科會計畫編號填於專案代號中</span>，因為國科會計畫編號會隨著年度逐年變動，並不適合做為專案代號的識別依據)&nbsp;
       </li>
       <li>
         專案摘要：<br>
+        專案的簡短介紹文字，長度為3至255個字，請用最精準的一句話形容您的專案特性。亦<span style=COLOR:#ff0000>請不要將國科會計畫編號填於專案摘要中</span>，此乃為了維持專案摘要言簡易賅的可讀性。<br>
         例如：OpenFoundry是一個供自由軟體專案開發人員討論、編寫、管理其專案內容所設置的共同作業平台。<br>
-        (專案的簡短介紹文字，長度為3至255個字，請用最精準的一句話形容您的專案特性。亦<span style=COLOR:#ff0000>請不要將國科會計畫編號填於專案摘要中</span>，此乃為了維持專案摘要言簡易賅的可讀性)<br>
       </li>
       <li>
         專案描述：<br>
-        例如：OpenFoundry是一個供自由軟體專案開發人員討論、編寫、管理其專案內容所設置的共同作業平台。一般的使用者可以透過此平台下載所需的自由軟體， 並提供下載程式的改良意見，本專案受到國科會計畫及中研院共同補助，本年度的國科會計畫編號為NSC97-2218-E-001-001。<br>
-        (專案的簡短介紹文字，長度為3至255個字，<span style=COLOR:#ff0000>請類同此例將國科會計畫編號編寫安插於「專案描述」中</span>，方便審核委員查找及參閱計畫成果。)<br>
+        專案的詳細的說明文字，長度為3至4000個字，<span style=COLOR:#ff0000>請類同此例將國科會計畫編號及分類編寫安插於「專案描述」中</span>，方便審核委員查找及參閱計畫成果。<br>
+        例如：<br>
+        國科會計畫編號：NSC97-2218-E-001-001<br>
+        國科會計畫分類：資訊安全<br>
+        OpenFoundry是一個供自由軟體專案開發人員討論、編寫、管理其專案內容所設置的共同作業平台。<br>
+        一般的使用者可以透過此平台下載所需的自由 軟體， 並提供下載程式的改良意見。<br>
+        <div id=ufsp style=TEXT-ALIGN:left>
+          <div id=kdgj style=TEXT-ALIGN:left>
+            <div id=bfan style=TEXT-ALIGN:left>
+              <img src="nsc_project_images/dhhd869h_43djj6kpfp_b.jpg" style="WIDTH:628px; HEIGHT:215px">
+            </div>
+          </div>
+        </div>
+      </li>
+      <li>
+        國科會計畫編號：<br>
+        最下面的欄位＂國科會計畫編號＂，為國科會專案的必填欄位，填入如 NSC97-2218-E-123-456 的代碼。<br>
+        若有此專案進入到第二或三之後的年度，此欄位用逗號分隔填入所有年度的代碼，例如：NSC97-2218-E-123-456, NSC98-2218-E-123-456, NSC99-2218-E-123-456。<br>
+        <div id=oj42 style=TEXT-ALIGN:left>
+          <img src="nsc_project_images/dhhd869h_113g2r4gqc3_b.jpg" style="WIDTH:553px; HEIGHT:73px">
+        </div>
       </li>
     </ul>
-    <div id=rxox style=TEXT-ALIGN:left>
-      <div id=w8uo style=TEXT-ALIGN:left>
-        <img src="nsc_project_images/dhhd869h_116dsq7n7hm_b.jpg" style="WIDTH:631px; HEIGHT:219px">
+    <div id=avxk style=TEXT-ALIGN:left>
+    </div>
+    <ul>
+    </ul>
+    <div id=auov style=TEXT-ALIGN:left>
+      <div id=yew1 style=TEXT-ALIGN:left>
       </div>
     </div>
   </li>
