--- a/of/app/views/partials/_top_menu_data.rhtml
+++ b/of/app/views/partials/_top_menu_data.rhtml
@@ -75,9 +75,9 @@ var menudata=
    <% if current_user.has_role? 'site_admin' %>
     ,{id:'<%=_('menu_Site Admin')%>', url:'/site_admin',
       submenu:[
-        {id:'<%= _('Approve Projects')%>', url:''},
-        {id:'<%= _('Translations')%>', url:''},
-        {id:'<%= _('Module Menagements')%>', url:''}
+        {id:'<%= _('Project List')%>', url:'/site_admin/project'},
+//        {id:'<%= _('Translations')%>', url:''},
+//        {id:'<%= _('Module Menagements')%>', url:''}
       ]
     }
    <% end %> 
