--- a/trunk/of/app/views/projects/show.rhtml
+++ b/trunk/of/app/views/projects/show.rhtml
@@ -55,7 +55,8 @@
 <fieldset style="clear:both;">
   <legend><%= _("Project Participants") %>:</legend>
   <% p_by_login.keys.sort{|a,b| a.casecmp(b)}.each do |login| -%>
-    <%= user_portrait_link(p_by_login[login][0], :with_login => true, :float => 'left') %>
+    <%= user_portrait_link(p_by_login[login][0], :with_login => true, :float => 'left',
+						 :rdf_tag => 'rel="doap:developer"') %>
   <% end -%>
 </fieldset>
 
